force-app/main/default/objects/Break_Down_Report__c/Break_Down_Report__c.object-meta.xml
<CustomObject>
    <description>Report of issues during the bus delivery process</description>
    <label>Breakdown Report</label>
    <nameField>
        <label>Breakdown Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breakdown Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>