force-app/main/default/objects/Break_Down_Report__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <label>Account Owner</label>
    <type>Email</type>
</CustomField>