force-app/main/default/objects/Break_Down_Report__c/fields/Breakdown_Location__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Location__c</fullName>
    <label>Breakdown Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>