force-app/main/default/objects/Break_Down_Report__c/fields/Bus_delivery_contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bus_delivery_contact_Email__c</fullName>
    <label>Bus delivery contact Email</label>
    <type>Email</type>
</CustomField>