force-app/main/default/objects/Break_Down_Report__c/fields/Call_Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Call_Taken_By__c</fullName>
    <label>Call Taken By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bob Birdwell</fullName>
            </value>
            <value>
                <fullName>Bo Vongamath</fullName>
            </value>
            <value>
                <fullName>Eric Ocampo</fullName>
            </value>
            <value>
                <fullName>Garfull Chan</fullName>
            </value>
            <value>
                <fullName>Ben Garcia</fullName>
            </value>
            <value>
                <fullName>Ryan Linn</fullName>
            </value>
            <value>
                <fullName>Richard Galvan</fullName>
                <isActive>false</isActive>
                <label>Richard Galvan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>