force-app/main/default/objects/Break_Down_Report__c/fields/contact_Name__c.field-meta.xml
<CustomField>
    <fullName>contact_Name__c</fullName>
    <description>The customer contact name for sending email notifications</description>
    <label>contact Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>