force-app/main/default/objects/Break_Down_Report__c/fields/Cost_of_Repair__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Repair__c</fullName>
    <label>Cost of Repair</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>