force-app/main/default/objects/Break_Down_Report__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>