force-app/main/default/objects/Break_Down_Report__c/fields/Date_of_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Breakdown__c</fullName>
    <label>Date of Breakdown</label>
    <type>DateTime</type>
</CustomField>