force-app/main/default/objects/Break_Down_Report__c/fields/Days_Down__c.field-meta.xml
<CustomField>
    <fullName>Days_Down__c</fullName>
    <description>Number of days a bus has been down</description>
    <formula>IF( text(Status__c) &lt;&gt; &quot;Delivered&quot;,   TODAY() - DATEVALUE(Date_of_Breakdown__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When a bus is not Delivered calculate today minus the date of breakdown</inlineHelpText>
    <label>Days Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>