force-app/main/default/objects/Break_Down_Report__c/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <description>Description of the issue provided by Driver</description>
    <label>Description of Issue</label>
    <type>TextArea</type>
</CustomField>