force-app/main/default/objects/Break_Down_Report__c/fields/Direction_provided__c.field-meta.xml
<CustomField>
    <fullName>Direction_provided__c</fullName>
    <description>Instructions provided to driver</description>
    <label>Direction provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>