force-app/main/default/objects/Break_Down_Report__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Breakdown Reports</relationshipLabel>
    <relationshipName>Breakdown_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>