force-app/main/default/objects/Break_Down_Report__c/fields/Driver_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Mobile_Number__c</fullName>
    <formula>Driver__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Mobile Number</label>
    <type>Text</type>
</CustomField>