force-app/main/default/objects/Break_Down_Report__c/fields/Final_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution__c</fullName>
    <label>Final Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>