force-app/main/default/objects/Break_Down_Report__c/fields/Location1__c.field-meta.xml
<CustomField>
    <fullName>Location1__c</fullName>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>