force-app/main/default/objects/Break_Down_Report__c/fields/Mileage_at_Report__c.field-meta.xml
<CustomField>
    <fullName>Mileage_at_Report__c</fullName>
    <label>Mileage at Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>