force-app/main/default/objects/Break_Down_Report__c/fields/Pickup_Driver__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Driver__c</fullName>
    <formula>Bus__r.Delivery_Driver__r.FirstName &amp;&quot; &quot;&amp; Bus__r.Delivery_Driver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Driver</label>
    <type>Text</type>
</CustomField>