force-app/main/default/objects/Break_Down_Report__c/fields/PSM_Email__c.field-meta.xml
<CustomField>
    <fullName>PSM_Email__c</fullName>
    <label>PSM Email</label>
    <type>Email</type>
</CustomField>