force-app/main/default/objects/Break_Down_Report__c/fields/Repair_Days__c.field-meta.xml
<CustomField>
    <fullName>Repair_Days__c</fullName>
    <description>Days taken to repair and complete delivering the bus</description>
    <label>Days to Repair</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>