force-app/main/default/objects/Break_Down_Report__c/fields/Repair_PO__c.field-meta.xml
<CustomField>
    <fullName>Repair_PO__c</fullName>
    <label>Repair PO#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>