force-app/main/default/objects/Break_Down_Report__c/fields/Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>Repair_Shop__c</fullName>
    <label>Repair Shop &amp; Contact Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>