force-app/main/default/objects/Break_Down_Report__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <type>TextArea</type>
</CustomField>