force-app/main/default/objects/Break_Down_Report__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <formula>Bus__r.Shipped_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>