force-app/main/default/objects/Break_Down_Report__c/fields/Towed__c.field-meta.xml
<CustomField>
    <fullName>Towed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Towed</label>
    <type>Checkbox</type>
</CustomField>