force-app/main/default/objects/Break_Down_Report__c/validationRules/Shipped_Date_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipped_Date_Not_Null</fullName>
    <active>true</active>
    <description>If shipped date is null, breakdown report cannot be created.</description>
    <errorConditionFormula>Shipped_Date__c &lt;&gt; NULL</errorConditionFormula>
    <errorMessage>Breakdown report cannot be created if Shipped Date is null.</errorMessage>
</ValidationRule>