force-app/main/default/objects/Break_Down_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_Name__c</columns>
    <columns>Call_Taken_By__c</columns>
    <columns>Description_of_Issue__c</columns>
    <columns>Direction_provided__c</columns>
    <columns>Status__c</columns>
    <columns>Date_of_Breakdown__c</columns>
    <columns>Cost_of_Repair__c</columns>
    <columns>Final_Resolution__c</columns>
    <columns>Responsible_Party__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>